kafka/kafdrop/deployment.yaml

#Kafdrop Deployment
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafdrop
  labels:
    app: kafdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafdrop
  template:
    metadata:
      labels:
        app: kafdrop
    spec:
      containers:
        - name: kafdrop
          image: obsidiandynamics/kafdrop
          resources:
            requests:
              memory: 512Mi
              cpu: "300m"
            limits:
              memory: 768Mi
              cpu: "300m"
          ports:
            - containerPort: 9000
              protocol: TCP
