kafka/kafdrop/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kafdrop
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kafdrop-test.rsm-prod-cloud.vodafone.local`)
      kind: Rule
      services:
        - name: kafdrop
          port: 9010
  tls:
    secretName: api-rsm-prod-ca-secret
